--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ axum = "0.8.7"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tokio = { version = "1", features = ["full"] }
-
+chrono = { version = "0.4", features = ["serde"] }
