--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ serde_json = "1.0.145"
 tokio = { version = "1", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
 validator = { version = "0.19", features = ["derive"] }
+jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
+bcrypt = "0.15"
+once_cell = "1.19" # Para gestionar la SECRET_KEY globalmente
+dotenv = "0.15"    # Para leer variables de entorno
+dotenvy = "0.15.7"
