--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,9 @@ dotenv = "0.15"    # Para leer variables de entorno
 dotenvy = "0.15.7"
 utoipa = { version = "5.4.0", features = ["axum_extras"] }
 utoipa-swagger-ui = { version = "9", features = ["axum"] }
+sqlx = { version = "0.7", features = [
+    "runtime-tokio-rustls",
+    "postgres",
+    "chrono",
+    "uuid"
+] }
